--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -25,7 +25,7 @@ info:
 # Docs: https://redefine-docs.ohevan.com/basic/defaults
 defaults:
   # Favicon
-  favicon: /images/redefine-favicon.svg
+  favicon: /images/baseImages/avatar.ico
   # Site logo
   logo: 
   # Site avatar
