--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -11,9 +11,9 @@
 # Docs: https://redefine-docs.ohevan.com/basic/info
 info:
   # Site title
-  title: 星纾钰的博客
+  title: 星纾钰
   # Site subtitle
-  subtitle: 为什么不试试呢
+  subtitle: 找不到对象
   # Author name
   author: 星纾钰
   # Site URL
@@ -208,6 +208,12 @@ navbar:
     Home: 
       path: / 
       icon: fa-regular fa-house # can be empty
+    Tags:
+      path: /tags/
+      icon: fa-solid fa-tags
+    Categories: 
+      icon: fa-solid fa-folder 
+      path: /categories/ 
     # Archives: 
     #   path: /archives 
     #   icon: fa-regular fa-archive # can be empty
@@ -399,7 +405,7 @@ footer:
   # Icon in footer, write fontawesome icon code here
   icon: '<i class="fa-solid fa-heart fa-beat" style="--fa-animation-duration: 0.5s; color: #f54545"></i>'
   # The start time of the website, format: YYYY/MM/DD HH:mm:ss
-  start: 2022/8/17 11:45:14
+  start: 2025/12/17 17:45:14
   # Site statistics
   statistics: true # show site statistics or not (total articles, total words)
   # Footer message
@@ -463,7 +469,7 @@ page_templates:
   # Friend Links page column number
   friends_column: 2
   # Tags page style
-  tags_style: blur # blur, cloud
+  tags_style: cloud # blur, cloud
 # PAGE TEMPLATES <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< end
 
 
