--- a/_config.yml
+++ b/_config.yml
@@ -102,3 +102,7 @@ theme: butterfly
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
+
+markdown:
+  plugins:
+    - '@renbaoshuo/markdown-it-katex'
